This file describes changes in the AutoDoc package.

2019.09.04
  - Deprecate @BeginAutoDoc and @EndAutoDoc; they will be removed in a future
    AutoDoc version
  - Deprecate @BeginAutoDocPlainText and @EndAutoDocPlainText; they will be
    removed in a future AutoDoc version
  - Fix @BeginCode / @EndCode / @InsertCode, which were broken in version 2019.07.03

2019.07.24
  - Add support for ISO 8601 dates in package metadata (to prepare for GAP adding
    official support for this in the future)
  - Remove undocumented and long-unused support entities specified using a raw
    `<!ENTITY NAME CONTENT>` entity string
  - Fix the &see; entity we always generate (for legacy support) to display
    the correct output in LaTeX / PDF mode
  - Fix support for chunks with names / labels that contain spaces (GAPDoc does
    not like these, so we replace the spaces by underscores)

2019.07.17
  - Fix bug in extract_examples option that could result in invalid .tst files

2019.07.03
  - Make Chunks compatible with GAPDoc chunks
  - Tweak two error messages, add two more error checks
  - Check that gapdoc.files is a list of strings
  - Add @GroupTitle command (thanks to Glen Whitney)
  - Make @Begin.../@EndExampleSession respect plain_text_mode (thanks to Glen Whitney)
  - Handle documentation of DeclareCategoryCollection declarations (thanks to Glen Whitney)
  - Repair minor omissions/imprecisions in AutoDoc() function doc (thanks to Glen Whitney)
  - Improve manual further

2019.05.20
  - Ensure that starting a "manpage" (= documentation for a filter, function, property,
    ...) ends any active subsection (in GAPDoc, manpages are equivalent to subsections
    internally, and hence cannot be nested in each other)
  - Add deprecation warnings for @InsertSystem, @System, @BeginSystem, @EndSystem
    (use @Chunk etc. instead), and also @EndSection, @EndSubsection
  - Rename scaffold.gapdoc_latex_options to gapdoc.LaTeXOptions. The old name is still