@@ -424,17 +424,17 @@ InstallGlobalFunction( CreateMakeTest,
     CloseStream( filestream );
 end );
 
-# The following function is originally by Alexander Konovalov
+# The following function is based on code by Alexander Konovalov
 BindGlobal("AUTODOC_ExtractMyManualExamples",
-function( pkgname, pkgdir, docdir, main, files, units )
+function( pkgname, pkgdir, docdir, main, files, opt )
     local tst, i, s, basename, name, output, ch, a, location, pos, comment, pkgdirString,
       nonempty_units_found, number_of_digits;
     Print("Extracting manual examples for ", pkgname, " package ...\n" );
     if not EndsWith(main, ".xml") then
         main := Concatenation( main, ".xml" );
     fi;
-    tst:=ExtractExamples( docdir, main, files, units );
-    Print(Length(tst), " ", LowercaseString( units ), "s detected\n");
+    tst:=ExtractExamples( docdir, main, files, opt.units );
+    Print(Length(tst), " ", LowercaseString( opt.units ), "s detected\n");
     pkgdirString := Filename(pkgdir, "");
     AUTODOC_CreateDirIfMissing( Filename(pkgdir, "tst") );
     nonempty_units_found := 0;
@@ -443,13 +443,17 @@ function( pkgname, pkgdir, docdir, main, files, units )
         number_of_digits := 2;
     fi;
     for i in [ 1 .. Length(tst) ] do
-        Print( units, " ", i, " : \c" );
+        Print( opt.units, " ", i, " : \c" );
         if Length( tst[i] ) = 0 then
             Print("no examples \n" );
             continue;
         fi;
         nonempty_units_found := nonempty_units_found + 1;
-        s := String( nonempty_units_found );
+        if opt.skip_empty_in_numbering then
+            s := String( nonempty_units_found );
+        else
+            s := String( i );
+        fi;
         # pad s to number_of_digits
         s := Concatenation( ListWithIdenticalEntries( number_of_digits - Length( s ), '0' ), s );
         basename := Concatenation( LowercaseString(pkgname), s, ".tst" );
@@ -458,7 +462,7 @@ function( pkgname, pkgdir, docdir, main, files, units )
         output := OutputTextFile( name, false ); # to empty the file first
         SetPrintFormattingStatus( output, false ); # to avoid line breaks
         ch := tst[i];
-        AppendTo(output, "# ", pkgname, ", ", LowercaseString( units ), " ", i, "\n");
+        AppendTo(output, "# ", pkgname, ", ", LowercaseString( opt.units ), " ", i, "\n");
         AppendTo(output,
 """#
 # DO NOT EDIT THIS FILE - EDIT EXAMPLES IN THE SOURCE INSTEAD!
